<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Collect</string>
    <string name="app_name_all_caps">COLLECT</string>
    <string name="fontawesome_logo">&#xf02b;</string>
    <string name="fontawesome_edit_profile">&#xf040;</string>
    <string name="username_hint">&#xf007;   username</string>
    <string name="password_hint">&#xf13e;   password</string>
    <string name="email_hint">&#xf003;   address@email.com</string>
    <string name="name_hint">&#xf118;   name</string>


    <string name="action_settings">Settings</string>
    <string name="ma_action_logout">Logout</string>

    <string name="activity_login_label">Login</string>
    <string name="activity_register_label">Make an Account</string>
    <string name="profile_followers">Followers</string>
    <string name="profile_following">Following</string>
    <string name="profile_activity">Profile</string>
    <string name="edit_profile_activity">Edit Profile</string>
    <string name="create_profile_activity">New Post</string>

    <string name="server_address">128.61.77.83:3000</string>

    <!-- Preferences -->
    <string name="email_pref">email</string>
    <string name="password_pref">password</string>


    <string-array name="ma_slide_drawer_items">
        <item>Main Feed</item>
        <item>My Collections</item>
        <item>Search</item>
        <item>Map</item>
        <item>Settings</item>
    </string-array>

</resources>
